# avz

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  VISION.md
.github/workflows/: quality.yml
assets/fixtures/: README.md
assets/fonts/: README.md
crates/avz-cli/: Cargo.toml
crates/avz-cli/src/: cli.rs  config.rs  exit.rs  main.rs  presets.rs  probe.rs  progress.rs  render.rs
crates/avz-cli/tests/: cli.rs  exit_codes.rs  render_e2e.rs
crates/avz-core/: Cargo.toml
crates/avz-core/presets/: aurora.json  aurora.wgsl  bars.json  bars.wgsl  beam.json  beam.wgsl  embers.json  embers.wgsl  fireflies.json  fireflies.wgsl  grain.json  grain.wgsl  halo.json  halo.wgsl  heartline.json  heartline.wgsl  horizon.json  horizon.wgsl  ink.json  ink.wgsl  kaleido.json  kaleido.wgsl  meter.json  meter.wgsl  mist.json  mist.wgsl  motes.json  motes.wgsl  nebula.json  nebula.wgsl  orbits.json  orbits.wgsl  particles.json  particles.wgsl  pulse.json  pulse.wgsl  rain.json  rain.wgsl  registry.rs  ribbons.json  (+17 more)
crates/avz-core/src/: error.rs  lib.rs  pipeline.rs  progress.rs
crates/avz-core/src/analysis/: decode.rs  envelope.rs  features.rs  mod.rs  onset.rs  spectrum.rs
crates/avz-core/src/config/: example.rs  mod.rs  set.rs  tests.rs  value.rs
crates/avz-core/src/encode/: encoder.rs  mod.rs  preflight.rs
crates/avz-core/src/meta/: mod.rs
crates/avz-core/src/render/: adapter.rs  background.rs  compositor.rs  effects.rs  feedback.rs  globals.rs  layer.rs  mod.rs  offscreen.rs  onsets.rs  palette.rs  preset.rs  readback.rs  schema.rs  spectrum.rs  text.rs  video.rs
crates/avz-core/tests/: analysis_perf.rs  background_video.rs  compositor.rs  docs_reference.rs  effects_render.rs  encode_ffmpeg.rs  feedback_texture.rs  golden_frames.rs  offscreen_readback.rs  onset_history_texture.rs  pipeline_render.rs  spectrum_texture.rs
crates/avz-core/tests/golden/: aurora.txt  bars.txt  beam.txt  embers.txt  fireflies.txt  grain.txt  halo.txt  heartline.txt  horizon.txt  ink.txt  kaleido.txt  meter.txt  mist.txt  motes.txt  nebula.txt  orbits.txt  palettes.txt  particles.txt  pulse.txt  rain.txt  ribbons.txt  ripples.txt  scope.txt  stained.txt  starfield.txt  strings.txt  text-card.txt  tiles.txt  tunnel.txt  veil.txt
designs/: RFC-001-mvp-v0.1.md  RFC-002-effects.md  USER-TASKS.md
docs/: COMMITS.md  CONFIGURATION.md  PRESETS.md  PROCESS.md  RELEASE.md  TESTING.md
docs/prompts/: implement.md
scripts/: album-acceptance.sh  install-git-hooks.sh  make-test-fixture.sh  quality.sh
scripts/quality.d/: 10-core-is-ui-agnostic.sh  20-ffmpeg-is-a-subprocess.sh  30-test-fixtures-are-small-and-cc0.sh  40-decode-stays-mp3-only.sh  41-background-images-stay-png-and-jpeg.sh  42-text-rasterizes-from-the-bundled-font.sh  43-background-video-reader-is-bounded-and-times-out.sh  45-the-codec-matrix-lives-in-one-place.sh  50-readback-padding-lives-in-one-place.sh  60-render-is-vulkan-only.sh  70-gpu-less-host-falls-back-to-lavapipe.sh  80-audio-is-never-reencoded.sh  90-animation-time-comes-from-the-frame-index.sh  95-golden-frames-run-on-the-software-adapter.sh  96-a-preset-is-only-files-in-presets.sh  97-warnings-are-actionable.sh
