[workspace]
members = ["crates/avz-core", "crates/avz-cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/IllyaYalovyy/avz"
authors = ["Illya Yalovyy <yalovoy@gmail.com>"]

[workspace.dependencies]
avz-core = { path = "crates/avz-core", version = "0.1.0" }

anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
lofty = "0.22"
serde = { version = "1.0", features = ["derive"] }
strsim = "0.11"
thiserror = "2.0"
toml = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.23"
