[workspace]
members = ["crates/avz-core", "crates/avz-cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/IllyaYalovyy/avz"
authors = ["Illya Yalovyy <yalovoy@gmail.com>"]

[workspace.dependencies]
avz-core = { path = "crates/avz-core", version = "0.1.0" }

anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
lofty = "0.22"
pollster = "0.4"
rayon = "1.11"
# Pure-Rust FFT. The planner is built once per song and its `Arc<dyn Fft>` is
# shared across rayon's threads, so the analysis pass plans nothing per window.
rustfft = "6.4"
serde = { version = "1.0", features = ["derive"] }
# Preset parameter schemas. `VISION.md` §6 fixes them as JSON, one file per
# preset, embedded with `include_str!`; `toml` cannot read them and a
# hand-rolled parser would be a parser to maintain.
serde_json = "1.0"
strsim = "0.11"
# mp3 only: avz decodes nothing else, and `id3v2` lets the demuxer skip the tag
# that `probe` already read. The default feature set adds flac/ogg/wav/vorbis.
symphonia = { version = "0.6", default-features = false, features = ["mp3", "id3v2"] }
thiserror = "2.0"
toml = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Vulkan only: avz has exactly one render code path — wgpu → Vulkan → (hardware
# driver | lavapipe) (AGENTS.md, rendering). The default feature set would also
# build the dx12, metal, and gles backends into the binary.
wgpu = { version = "30", default-features = false, features = ["std", "vulkan", "wgsl"] }

assert_cmd = "2.0"
predicates = "3.1"
# Golden-frame hashes only. A test dependency: nothing in the shipped binary
# hashes anything, and `sha2` never reaches `avz-core`'s normal dependency tree.
sha2 = "0.10"
tempfile = "3.23"
