[package]
name = "avz-core"
description = "Core library for avz: audio analysis, rendering, and encoding. UI-agnostic."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
image.workspace = true
lofty.workspace = true
pollster.workspace = true
rayon.workspace = true
rustfft.workspace = true
serde.workspace = true
serde_json.workspace = true
strsim.workspace = true
symphonia.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
wgpu.workspace = true

[dev-dependencies]
sha2.workspace = true
# `PresetSchema::resolve` takes a `toml::Table`, so the golden-frame harness
# needs to build one.
toml.workspace = true
tempfile.workspace = true
